# mpc4rl

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml  ruff.toml  setup.cfg  setup.py
config/: cartpole.yaml  cartpole_original.yaml  test_AcadosMPC.yaml  test_AcadosMPC_sensitivities.yaml  test_ipopt_mpc_gym_cartpole.yaml  test_mpc_gym_cartpole.yaml  test_td3_AcadosMPC.yaml  test_td3_CasadiMPC.yaml  test_td3_interface.yaml
examples/: chain_mass.py  linear_system_mpc_qlearning.py  pendulum_mpc.py  pendulum_on_cart_sensitivities.py
examples/stable_baselines3/: cartpole_ppo.py
house_data/: subspace_prediction.py  subspace_simulator.py
paper_nmpc_2024/: main.tex  rlmpc_bibliography.bib
prototyping/: gradient_test.py  policy_gradient_example.py  prototype_value_functions.py
rlmpc/common/: config_parsing.py  file_utils.py  integrator.py  mpc.py  policies.py  utils.py
scripts/: cartpole_mpc_as_td3_agent_closed_loop.py  cartpole_mpc_closed_loop.py  cartpole_mpc_closed_loop_replay_buffer.py  cartpole_mpc_kkt_conditions.py  cartpole_mpc_nlp.py  cartpole_mpc_qlearning.py  cartpole_mpc_qlearning_agent.py  cartpole_mpc_sensitivities.py  chain_mass_finite_differences.py  chain_mass_timings.py  cstr_enmpc.py  cstr_mpc.py  evaporation_process_mpc.py  evaporation_process_mpc_nlp.py  evaporation_process_mpc_qlearning.py  hvac_model.py  linear_system_mpc.py  linear_system_mpc_nlp.py  linear_system_mpc_qlearning.py  linear_system_mpc_qlearning_results_analysis.py  test_AcadosMPC.py  test_AcadosMPC_QLearning.py  test_AcadosMPC_sensitivities.py  test_acados_mpc_closed_loop.py  test_dqn_AcadosMPC.py  test_mpc_gym_cartpole.py  test_td3_AcadosMPC.py
tests/: common.py  test_AcadosMPC.py  test_AcadosMPC_QLearning.py  test_CasadiMPC_sensitivities.py  test_acados_mpc_closed_loop.py  test_cartpole.py  test_cartpole_mpc.py  test_chain_mass.py  test_gym_continuous_cartpole.py  test_linear_example.py  test_linear_system.py  test_load_model.py  test_main.py  test_misc.py  test_mpc_gym_cartpole.py  test_pendulum_on_cart.py  test_td3_AcadosMPC.py  test_td3_CasadiMPC.py  test_td3_interface.py  test_td3_mpc_acados.py  test_td3_mpc_ipopt.py
(+42 files in other folders)
