[metadata]
name = rlmpc
version = 0.1
author = Dirk Reinhardt, Shambhuraj Sawant
author_email = dirk.p.reinhardt@ntnu.no
description = Library for MPC-based Reinforcement Learning
url = https://github.com/MPC-Based-Reinforcement-Learning/rlmpc
long_description = file: README.md, LICENSE
long_description_content_type= text/markdown
keywords = reinforcement learning, model predictive control, python
classifiers = 
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
project_urls =
    Bug Tracker = https://github.com/MPC-Based-Reinforcement-Learning/rlmpc/issues

[options]
package_dir =
  '' = rlmpc
packages = find:
install_requires =
    numpy>=1.20
    matplotlib
    matplotlib-scalebar
    scipy
    pandas
    pyyaml
    dacite
    opencv-python
    pygame
    gymnasium>=0.28.1
    torch>=1.13
    tqdm

python_requires = >=3.10
test_suite = tests